Fix faculty/department filter alignment in dark mode

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -284,7 +284,7 @@ $module-section-min-height: 700px;
 
 .facet-Department .checkbox-inline {
   display: block;
-  margin-left: 0;
+  margin-left: 0 !important;
 }
 
 .arrow-right {
